--- a/crowdfunding/templates/index.html
+++ b/crowdfunding/templates/index.html
@@ -128,6 +128,7 @@ h3.break>a {
         <li data-target="#myCarousel" data-slide-to="2"></li>
       </ol>
       <div class="carousel-inner" role="listbox">
+
         <div class="item active" onclick="window.location.href='project.html'" style="cursor:pointer;">
           <img src="{% static 'img/carousel-1.jpg' %}" alt="First slide">
         </div>
@@ -157,24 +158,15 @@ h3.break>a {
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
+          {% for pro in all_project %}
         <div class="col-lg-4">
-          <img class="img-circle" src="{% static 'img/p1.jpg' %}" alt="Generic placeholder image" style="width: 140px; height: 140px;">
-          <h2>智能高清监控机器人</h2>
-          <p>可爱的造型，摄像安防远程互联的全能设计，让你随时随地守护您的家人，陪伴你的生活。</p>
-          <p><a class="btn btn-default" href="project.html" role="button">项目详情 &raquo;</a></p>
+          <img class="img-circle" src="{% static pro.project_img %}" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+          <h2>{{ pro.name }}</h2>
+          <p>{{ pro.desc }}</p>
+          <p><a class="btn btn-default" href="{% url 'project:project_detail' project_id=pro.id%}" role="button">项目详情 &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <img class="img-circle" src="{% static 'img/p2.jpg' %}" alt="Generic placeholder image" style="width: 140px; height: 140px;">
-          <h2>NEOKA智能手环</h2>
-          <p>要运动更要安全，这款、名为“蝶舞”的NEOKA-V9100智能运动手环为“安全运动而生”。</p>
-          <p><a class="btn btn-default" href="project.html" role="button">项目详情 &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <img class="img-circle" src="{% static 'img/p3.png' %}" alt="Generic placeholder image" style="width: 140px; height: 140px;">
-          <h2>驱蚊扣</h2>
-          <p>随处使用的驱蚊纽扣，<br>解决夏季蚊虫问题。</p>
-          <p><a class="btn btn-default" href="project.html" role="button">项目详情 &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
+          {% endfor %}
+
       </div><!-- /.row -->
       
 <div class="container">
