--- a/crowdfunding/templates/startpro/start-step-2.html
+++ b/crowdfunding/templates/startpro/start-step-2.html
@@ -349,8 +349,8 @@
                         </div>
                         </div>
                         <div class="panel-footer" style="text-align:center;">
-                            <button type="button" class="btn  btn-default btn-lg" onclick="window.location.href='start-step-1.html'">上一步</button>
-                            <button type="button" class="btn  btn-warning btn-lg" onclick="window.location.href='start-step-3.html'">下一步</button>
+                            <button type="button" class="btn  btn-default btn-lg" onclick="window.location.href='{% url 'startpro:projectinfo' %}'">上一步</button>
+                            <button type="button" class="btn  btn-warning btn-lg" onclick="window.location.href='{% url 'startpro:projectaccount' %}'">下一步</button>
                             <a class="btn" > 预览 </a>
                         </div>
                     </div>
