--- a/crowdfunding/templates/startpro/start-step-4.html
+++ b/crowdfunding/templates/startpro/start-step-4.html
@@ -214,7 +214,7 @@
                         </div>
                         </div>
                         <div class="panel-footer" style="text-align:center;">
-                            <button type="button" class="btn  btn-warning btn-lg" onclick="window.location.href='minecrowdfunding.html'">我的众筹</button>
+                            <button type="button" class="btn  btn-warning btn-lg" onclick="window.location.href='{% url 'user:userfunding' %}'">我的众筹</button>
                         </div>
                     </div>
                 </div>
