--- a/crowdfunding/templates/user/member.html
+++ b/crowdfunding/templates/user/member.html
@@ -51,6 +51,7 @@
 	</style>
   </head>
   <body>
+
  <div class="navbar-wrapper">
       <div class="container">
 			<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -87,7 +88,10 @@
 							<h3>
 								ZhangSan
 							</h3>
-							<span class="label label-danger" style="cursor:pointer;" onclick="window.location.href='accttype.html'">未实名认证</span>
+                            {% csrf_token %}
+							<span class="label label-danger" style="cursor:pointer;" onclick="window.location.href='{% url 'user:usercertify_apply' %}'">未实名认证</span>
+{#                            <button class="label label-danger" style="cursor:pointer;" id="ceritifybtn">未实名认证</button>#}
+
 						</div>
 					</div>
 				</div>
@@ -96,7 +100,7 @@
 				<div class="list-group-item active">
 					资产总览<span class="badge"><i class="glyphicon glyphicon-chevron-right"></i></span>
 				</div>
-				<div class="list-group-item " style="cursor:pointer;" onclick="window.location.href='minecrowdfunding.html'">
+				<div class="list-group-item " style="cursor:pointer;" onclick="window.location.href='{% url 'user:userfunding' %}'">
 					我的众筹<span class="badge"><i class="glyphicon glyphicon-chevron-right"></i></span>
 				</div>
 			</div>
@@ -143,6 +147,7 @@
 	<script src="{% static 'script/docs.min.js' %}"></script>
     <script src="{% static 'script/back-to-top.js' %}"></script>
     <script src="{% static 'script/echarts.js' %}"></script>
+
 	<script>
 $('#myTab a').click(function (e) {
   e.preventDefault()
