--- a/crowdfunding/templates/user/reg.html
+++ b/crowdfunding/templates/user/reg.html
@@ -79,14 +79,15 @@
                 $.post('/user/register/', params, function (data) {
                     // 用户名密码错误 {'res': 0}
                     // 登录成功 {'res': 1}
-                    if (data.res == 0){
-                        $('#username').next().html('用户名或密码错误').show()
-                    }
-                    else (data.res == 200)
-                    {
+                    if (data.res == 200){
                         // 跳转页面
                         {#location.href = {% url 'user:userinfo' %} // /user/#}
-                        window.location.href = '{% url 'user:userinfo' %}'
+                        window.location.href = '{% url 'user:login' %}'
+                    }
+                    else
+                    {
+                        $('#username').next().html('用户名或密码错误').show()
+
 
                     }
                 })
