--- a/crowdfunding/templates/order/pay-step-2.html
+++ b/crowdfunding/templates/order/pay-step-2.html
@@ -181,18 +181,14 @@
                                     </blockquote>
                                 </div>
                                 <div class="col-md-12 column" style="padding:0 120px;">
+                                    {% for add in address %}
                                     <div class="radio">
                                       <label>
-                                        <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
-                                        xxxxx 188****3342 xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                                        <input type="radio" name="AddressOptions" id="optionsRadios{{ forloop.counter }}" value="{{ add.id }}">
+                                        {{ add.receiver }} {{ add.phone }} {{ add.address }}
                                       </label>
                                     </div>
-                                    <div class="radio">
-                                      <label>
-                                        <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-                                        xxxxx 188****3342 xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-                                      </label>
-                                    </div>
+                                    {% endfor %}
                                     <div class="radio">
                                       <label>
                                         <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
@@ -211,25 +207,26 @@
                                                   <div class="form-group">
                                                     <label class="col-sm-2 control-label">收货人（*）</label>
                                                     <div class="col-sm-10">
-                                                      <input type="text" class="form-control" style="width:200px;" placeholder="姓名：xxxx" >
+                                                      <input type="text" class="form-control" style="width:200px;" id="receiver" placeholder="姓名：xxxx" >
                                                     </div>
                                                   </div>
                                                   <div class="form-group">
                                                     <label class="col-sm-2 control-label">手机（*）</label>
                                                     <div class="col-sm-10">
-                                                      <input class="form-control" type="text" style="width:200px;" placeholder="请填写11位手机号码"></input>
+                                                      <input class="form-control" type="text" style="width:200px;" id="phone" placeholder="请填写11位手机号码">
                                                     </div>
                                                   </div>
                                                   <div class="form-group">
                                                     <label class="col-sm-2 control-label">地址（*）</label>
                                                     <div class="col-sm-10">
-                                                      <input class="form-control" type="text" style="width:400px;" placeholder="请填写11位手机号码"></input>
+                                                      <input class="form-control" type="text" style="width:400px;" id="address" placeholder="请填写地址">
                                                     </div>
                                                   </div>
                                                   <div class="form-group">
                                                     <label for="inputEmail3" class="col-sm-2 control-label"></label>
                                                     <div class="col-sm-10">
-                                                          <button type="button" class="btn btn-primary">确认配送信息</button>
+                                                        {% csrf_token %}
+                                                          <button type="button" class="btn btn-primary" id="AddressBtn">确认配送信息</button>
                                                     </div>
                                                   </div>
                                                 </form>
@@ -251,13 +248,13 @@
                                 <div class="col-md-12 column" style="padding:0 120px;">
                                     <div class="radio">
                                       <label>
-                                        <input type="radio" name="optionsRadios1" id="optionsRadios1" value="option1" checked>
+                                        <input type="radio" name="need_receipt" id="optionsRadios1" value="0">
                                         无需发票
                                       </label>
                                     </div>
                                     <div class="radio">
                                       <label>
-                                        <input type="radio" name="optionsRadios1" id="optionsRadios2" value="option2">
+                                        <input type="radio" name="need_receipt" id="optionsRadios2" value="1">
                                         需要发票
                                       </label>
                                     </div>
@@ -273,7 +270,7 @@
                                                   <div class="form-group">
                                                     <label class="col-sm-2 control-label">发票抬头（*）</label>
                                                     <div class="col-sm-10">
-                                                      <input type="text" class="form-control" style="width:200px;" placeholder="个人" >
+                                                      <input type="text" class="form-control" style="width:200px;" id="receipt_head" placeholder="个人" >
                                                     </div>
                                                   </div>
                                                 </form>
@@ -306,12 +303,12 @@
                                       </thead>
                                       <tbody>
                                         <tr>
-                                          <td>活性富氢净水直饮机</td>
-                                          <td>深圳市博实永道电子商务有限公司</td>
-                                          <td>每满1750人抽取一台活性富氢净水直饮机，至少抽取一台。抽取名额（小数点后一位四舍五入）=参与人数÷1750人，由苏宁官方抽取。</td>
-                                          <td>1</td>
-                                          <td style="color:#F60">￥ 1.00</td>
-                                          <td>免运费</td>
+                                          <td>{{ project.name }}</td>
+                                          <td>{{ project.brief_intro }}</td>
+                                          <td>{{ repayinfo.repay_content }}</td>
+                                          <td>{{ orderinfo.repay_count }}</td>
+                                          <td style="color:#F60">￥ {{ repayinfo.support_money }}</td>
+                                          <td>{% ifequal repayinfo.freight 0 %}免运费{% else %}<span class="freight">{{ repayinfo.freight }}</span>{% endifequal %}</td>
                                         </tr>
                                       </tbody>
                                     </table>
@@ -320,7 +317,7 @@
                                   <div class="form-group">
                                     <label class="col-sm-2 control-label">备注</label>
                                     <div class="col-sm-10">
-                                      <textarea class="form-control" rows="1" placeholder="填写关于回报或发起人希望您备注的信息"></textarea>
+                                      <textarea class="form-control" rows="1" id="remarks" placeholder="填写关于回报或发起人希望您备注的信息"></textarea>
                                     </div>
                                   </div>
                                 </div>
@@ -335,10 +332,10 @@
                                 <div class="col-md-12 column">
                                         <div class="alert alert-warning alert-dismissable" style="text-align:right; border:2px solid #ffc287;">
                                             <ul style="list-style:none;" >
-                                                <li style="margin-top:10px;">支持金额：<span style="color:red;">￥1.00</span></li>
-                                                <li style="margin-top:10px;">配送费用：<span style="color:red;">￥0.00</span></li>
-                                                <li style="margin-top:10px;">优惠金额：<span style="color:red;">-￥0.00</span></li>
-                                                <li style="margin-top:10px;margin-bottom:10px;"><h2>支付总金额：<span style="color:red;">￥1.00</span></h2></li>
+                                                <li style="margin-top:10px;">支持金额：<span style="color:red;">￥<span class="total_price">{{ orderinfo.total_price }}</span></span></li>
+                                                <li style="margin-top:10px;">配送费用：<span style="color:red;">￥<span class="freight">{{ orderinfo.freight }}</span></span></li>
+                                                <li style="margin-top:10px;">优惠金额：<span style="color:red;">-￥<span class="discount">{{ orderinfo.discount }}</span></span></li>
+                                                <li style="margin-top:10px;margin-bottom:10px;"><h2>支付总金额：<span style="color:red;">￥<span class="pay_price">{{ orderinfo.pay_price }}</span></span></h2></li>
                                                 <li style="margin-top:10px;padding:5px;border:1px solid #F00;display:initial;background:#FFF;">
                                                     <i class="glyphicon glyphicon-info-sign"></i> <strong>您需要先 <a href="#address">设置配送信息</a> ,再提交订单</strong> 
                                                 </li>
@@ -346,7 +343,8 @@
                                                 请在下单后15分钟内付款，否则您的订单会被自动关闭。
                                                 </li>
                                                 <li style="margin-top:10px;">
-                                                <button disabled="disabled" type="button" class="btn btn-warning btn-lg" onclick="window.location.href='pay-step-3.html'"><i class="glyphicon glyphicon-credit-card"></i> 立即付款</button>
+                                                    {% csrf_token %}
+                                                <button type="button" class="btn btn-warning btn-lg" id="BtnConfirm"><i class="glyphicon glyphicon-credit-card"></i> 立即付款</button>
                                                 </li>
                                                 <li style="margin-top:10px;">
                                                   <div class="checkbox">
@@ -369,7 +367,7 @@
                                                 </p><br>
                                                 <span style="font-size:12px;">1.众筹并非商品交易，存在一定风险。支持者根据自己的判断选择、支持众筹项目，与发起人共同实现梦想并获得发起人承诺的回报。<br>
                                                 2.众筹平台仅提供平台网络空间及技术支持等中介服务，众筹仅存在于发起人和支持者之间，使用众筹平台产生的法律后果由发起人与支持者自行承担。<br>
-                                                3.本项目必须在2017-06-04之前达到 ￥1000000.00 的目标才算成功，否则已经支持的订单将取消。订单取消或募集失败的，您支持的金额将原支付路径退回。<br>
+                                                3.本项目必须在{{ project.get_finish_time }}之前达到 ￥{{ project.target_money }} 的目标才算成功，否则已经支持的订单将取消。订单取消或募集失败的，您支持的金额将原支付路径退回。<br>
                                                 4.请在支持项目后15分钟内付款，否则您的支持请求会被自动关闭。<br>
                                                 5.众筹成功后由发起人统一进行发货，售后服务由发起人统一提供；如果发生发起人无法发放回报、延迟发放回报、不提供回报后续服务等情况，您需要直接和发起人协商解决。<br>
                                                 6.如您不同意上述风险提示内容，您有权选择不支持；一旦选择支持，视为您已确认并同意以上提示内容。</span>
@@ -409,6 +407,88 @@
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 	<script src="{% static 'script/docs.min.js' %}"></script>
     <script src="{% static 'script/back-to-top.js' %}"></script>
+
+  <script>
+        $(function () {
+            //提交订单信息
+            $('#BtnConfirm').click(function () {
+                address_id = $("input[name='AddressOptions']:checked").val();
+                need_receipt = $("input[name='need_receipt']:checked").val();
+                receipt_head = $('#receipt_head').val()
+                pay_price = parseInt($('.pay_price').text())
+                remarks = $('#remarks').val()
+                csrf = $('input[name="csrfmiddlewaretoken"]').val()
+                //remember = $('input[name="remember"]').prop('checked')
+                // 发起ajax请求
+                params = {
+                    'address_id':address_id,
+                    'need_receipt':need_receipt,
+                    'receipt_head':receipt_head,
+                    'pay_price':pay_price,
+                    'remarks':remarks,
+                    'csrfmiddlewaretoken':csrf,
+                }
+                $.post('/order/confirmorderorder/', params, function (data) {
+                    // 用户名密码错误 {'res': 0}
+                    // 登录成功 {'res': 1}
+                    if (data.res == 200){
+                         // 跳转页面
+                        {#location.href = {% url 'user:userinfo' %} // /user/#}
+                        window.location.href = "{% url 'user:userinfo' %}"
+                    }
+                    else
+                    {
+                    }
+                })
+            })
+
+            update_total_price()
+            // 计算支付总金额
+            function update_total_price() {
+                // 获取商品的价格和数量
+                total_price = $('.total_price').text()
+                discount = $('.discount').text()
+                freight = $('.freight').text()
+                // 计算商品的总价
+                total_price = parseInt(total_price)
+                discount = parseInt(discount)
+                freight = parseInt(freight)
+                pay_price = total_price + freight - discount
+                // 设置商品总价
+                $('.pay_price').text(pay_price.toFixed(2))
+            }
+
+            //提交新地址信息
+            $('#AddressBtn').click(function () {
+                receiver = $('#receiver').val()
+                phone = $('#phone').val()
+                address = $('#address').val()
+                csrf = $('input[name="csrfmiddlewaretoken"]').val()
+                //remember = $('input[name="remember"]').prop('checked')
+                // 发起ajax请求
+                params = {
+                    'receiver':receiver,
+                    'phone':phone,
+                    'address':address,
+                    'csrfmiddlewaretoken':csrf,
+                }
+                alert(receiver)
+                $.post('/user/add_address/', params, function (data) {
+                    // 用户名密码错误 {'res': 0}
+                    // 登录成功 {'res': 1}
+                    if (data.res == 200){
+                        alert('添加成功')
+                        // 需要把新增加的地址显示在页面中？？？？？？？？？？？？、？？？？？？？？
+                    }
+                    else
+                    {
+                    }
+                })
+            })
+        })
+    </script>
+
+
 	<script>
 $('#myTab a').click(function (e) {
   e.preventDefault()
