--- a/crowdfunding/templates/project/project_list.html
+++ b/crowdfunding/templates/project/project_list.html
@@ -230,9 +230,9 @@
                                     <br>
                                     <div class="progress" style="margin-bottom: 4px;">
                                         <div class="progress-bar progress-bar-success" role="progressbar"
-                                             aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
-                                             style="width: 40%">
-                                            <span>40% </span>
+                                             aria-valuenow="{{ project.get_rate }}" aria-valuemin="0" aria-valuemax="100"
+                                             style="width: {{ project.get_rate }}%">
+                                            <span>{{ project.get_rate }}% </span>
                                         </div>
                                     </div>
                                     <div><span style="float:right;"><i
