--- a/crowdfunding/templates/project/project_list.html
+++ b/crowdfunding/templates/project/project_list.html
@@ -153,37 +153,37 @@
                         <ul id="typeList" style="list-style: none;">
                             <li>
                                 分类：<span class=" {% if sort == '' %}actvie{% endif %}"><a
-                                    href="?order={{ order }}&status={{ status }}">全部</a></span>
+                                    href="?order={{ order }}&status={{ status }}&keywords={{ keywords }}">全部</a></span>
                                 <span class=" {% if sort == 'technology' %}actvie{% endif %}"><a
-                                        href="?sort=technology&status={{ status }}&order={{ order }}">科技</a></span>
+                                        href="?sort=technology&status={{ status }}&order={{ order }}&keywords={{ keywords }}">科技</a></span>
                                 <span class=" {% if sort == 'design' %}actvie{% endif %}"><a
-                                        href="?sort=design&status={{ status }}&order={{ order }}">设计</a></span>
+                                        href="?sort=design&status={{ status }}&order={{ order }}&keywords={{ keywords }}">设计</a></span>
                                 <span class=" {% if sort == 'public_welfare' %}actvie{% endif %}"><a
-                                        href="?sort=public_welfare&status={{ status }}&order={{ order }}">公益</a></span>
+                                        href="?sort=public_welfare&status={{ status }}&order={{ order }}&keywords={{ keywords }}">公益</a></span>
                                 <span class=" {% if sort == 'agriculture' %}actvie{% endif %}"><a
-                                        href="?sort=agriculture&status={{ status }}&order={{ order }}">农业</a></span>
+                                        href="?sort=agriculture&status={{ status }}&order={{ order }}&keywords={{ keywords }}">农业</a></span>
                                 <span class=" {% if sort == 'culture' %}actvie{% endif %}"><a
-                                        href="?sort=culture&status={{ status }}&order={{ order }}">文化</a></span>
+                                        href="?sort=culture&status={{ status }}&order={{ order }}&keywords={{ keywords }}">文化</a></span>
                             </li>
                             <li>
                                 状态：<span class="  {% if status == '' %}actvie{% endif %}"><a
-                                    href="?order={{ order }}&sort={{ sort }}">全部</a></span>
+                                    href="?order={{ order }}&sort={{ sort }}&keywords={{ keywords }}">全部</a></span>
                                 <span class=" {% if status == '0' %}actvie{% endif %}"><a
-                                        href="?status=0&order={{ order }}&sort={{ sort }}">即将开始</a></span>
+                                        href="?status=0&order={{ order }}&sort={{ sort }}&keywords={{ keywords }}">即将开始</a></span>
                                 <span class=" {% if status == '1' %}actvie{% endif %}"><a
-                                        href="?status=1&order={{ order }}&sort={{ sort }}">众筹中</a></span>
+                                        href="?status=1&order={{ order }}&sort={{ sort }}&keywords={{ keywords }}">众筹中</a></span>
                                 <span class=" {% if status == '2' %}actvie{% endif %}"><a
-                                        href="?status=2&order={{ order }}&sort={{ sort }}">众筹成功</a></span>
+                                        href="?status=2&order={{ order }}&sort={{ sort }}&keywords={{ keywords }}">众筹成功</a></span>
                             </li>
                             <li>
                                 排序：<span class=" {% if order == '' %}actvie{% endif %}"><a
-                                    href="?status={{ status }}&sort={{ sort }}">综合排序</a></span>
+                                    href="?status={{ status }}&sort={{ sort }}&keywords={{ keywords }}">综合排序</a></span>
                                 <span class=" {% if order == 'new' %}actvie{% endif %}"><a
-                                        href="?order=new&status={{ status }}&sort={{ sort }}">最新上线</a></span>
+                                        href="?order=new&status={{ status }}&sort={{ sort }}&keywords={{ keywords }}">最新上线</a></span>
                                 <span class=" {% if order == 'money' %}actvie{% endif %}"><a
-                                        href="?order=money&status={{ status }}&sort={{ sort }}">金额最多</a></span>
+                                        href="?order=money&status={{ status }}&sort={{ sort }}&keywords={{ keywords }}">金额最多</a></span>
                                 <span class=" {% if order == 'support' %}actvie{% endif %}"><a
-                                        href="?order=support&status={{ status }}&sort={{ sort }}">支持最多</a></span>
+                                        href="?order=support&status={{ status }}&sort={{ sort }}&keywords={{ keywords }}">支持最多</a></span>
                             </li>
                         </ul>
                     </div>
@@ -194,11 +194,13 @@
                         <div style="float:right;">
                             <form class="navbar-form navbar-left" role="search">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="请输入搜索内容">
+                                    <input type="text" class="form-control" id="searchword" placeholder="请输入搜索内容">
                                 </div>
-                                <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i>
-                                    搜索
+                                <button type="button" id="searchbtn" class="btn btn-default"><i class="glyphicon glyphicon-search"></i>
+                                  搜索
                                 </button>
+                                <button type="button" id="clearbtn" class="btn btn-default"><i class=""></i>
+                                清空搜索</button>
                             </form>
                         </div>
                     </div>
@@ -226,7 +228,6 @@
                                     <div style="float:right;"><i title="截至日期"
                                                                  class="glyphicon glyphicon-calendar"></i> {{ project.create_time }}
                                     </div>
-                                    </p>
                                     <br>
                                     <div class="progress" style="margin-bottom: 4px;">
                                         <div class="progress-bar progress-bar-success" role="progressbar"
@@ -304,6 +305,27 @@
 <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 <script src="{% static 'script/docs.min.js' %}"></script>
 <script src="{% static 'script/back-to-top.js' %}"></script>
+
+
+  <script>
+        $(function () {
+            //顶部搜索栏搜索方法
+            $('#searchbtn').click(function () {
+                keywords = $('#searchword').val()
+                request_url = '';
+                if (keywords == "") {
+                    return
+                } else {
+                    request_url = "/project/project_list?keywords=" + keywords
+                }
+                window.location.href = request_url
+            })
+            $('#clearbtn').click(function () {
+                request_url = "/project/project_list/"
+                window.location.href = request_url
+            })
+        })
+    </script>
 <script>
     $('#myTab a').click(function (e) {
         e.preventDefault()
